5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1593_588.log
== SUBMITION (2019-03-28 11:41:19) 
-- CODE:
valor = int(input(" qual o valor do saque"))
notasR100 = valor // 100
restoR100 = valor % 100
notaR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10
print(int(notasR100))
print(int(notasR50))
print(int(notasR10))


-- EXECUTION TIME:
0.153436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/588/main.py", line 8, in <module>
    print(int(notasR50))
NameError: name 'notasR50' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:41:47) 
-- CODE:
valor = int(input(" qual o valor do saque"))
notasR100 = valor // 100
restoR100 = valor % 100
notasR50 = restoR100 // 50
restoR50 = restoR100 % 50
notasR10 = restoR50 // 10
print(int(notasR100))
print(int(notasR50))
print(int(notasR10))


-- EXECUTION TIME:
0.159834
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
